exports[`handle blur by clicking on input and clicking something else`] = `
<span>
  <span
    id="mirrorNode"
    style={
      Object {
        "overflow": "scroll",
        "position": "absolute",
        "visibility": "hidden",
        "whiteSpace": "pre",
      }
    }>
    
  </span>
  <input
    className="react-input-tags-input"
    id="inputNode"
    onBlur={[Function]}
    onChange={[Function]}
    onKeyDown={[Function]}
    placeholder=""
    tabIndex={undefined}
    type="text"
    value="" />
</span>
`;

exports[`handle change by typing in input`] = `
<span>
  <span
    id="mirrorNode"
    style={
      Object {
        "overflow": "scroll",
        "position": "absolute",
        "visibility": "hidden",
        "whiteSpace": "pre",
      }
    }>
    
  </span>
  <input
    className="react-input-tags-input"
    id="inputNode"
    onBlur={[Function]}
    onChange={[Function]}
    onKeyDown={[Function]}
    placeholder=""
    tabIndex={undefined}
    type="text"
    value="" />
</span>
`;

exports[`handle keydown by typing in input`] = `
<span>
  <span
    id="mirrorNode"
    style={
      Object {
        "overflow": "scroll",
        "position": "absolute",
        "visibility": "hidden",
        "whiteSpace": "pre",
      }
    }>
    
  </span>
  <input
    className="react-input-tags-input"
    id="inputNode"
    onBlur={[Function]}
    onChange={[Function]}
    onKeyDown={[Function]}
    placeholder=""
    tabIndex={undefined}
    type="text"
    value="" />
</span>
`;

exports[`show empty placeholder by rendering`] = `
<span>
  <span
    id="mirrorNode"
    style={
      Object {
        "overflow": "scroll",
        "position": "absolute",
        "visibility": "hidden",
        "whiteSpace": "pre",
      }
    }>
    
  </span>
  <input
    className="react-input-tags-input"
    id="inputNode"
    onBlur={[Function]}
    onChange={[Function]}
    onKeyDown={[Function]}
    placeholder=""
    tabIndex={undefined}
    type="text"
    value="" />
</span>
`;

exports[`show non empty placeholder by rendering`] = `
<span>
  <span
    id="mirrorNode"
    style={
      Object {
        "overflow": "scroll",
        "position": "absolute",
        "visibility": "hidden",
        "whiteSpace": "pre",
      }
    }>
    m
  </span>
  <input
    className="react-input-tags-input"
    id="inputNode"
    onBlur={[Function]}
    onChange={[Function]}
    onKeyDown={[Function]}
    placeholder="m"
    tabIndex={undefined}
    type="text"
    value="" />
</span>
`;
